samples/_failures_safe/1761362111_685fa7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c7c96ede.c: In function ‘evaluate_expression’:
./samples/SAFE/__tmp_c7c96ede.c:167:5: error: expected declaration or statement at end of input
  167 |     Parser parser;
      |     ^~~~~~
